// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Destructive button renders 1`] = `
.c0 {
  background: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: .8125rem;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  white-space: nowrap;
  padding: 0 .5rem;
  min-width: 4rem;
  min-height: 2rem;
  border: none;
  border-radius: .125rem;
  font-family: Roboto,sans-serif;
  color: hsla(0,0%,0%,.87);
  color: #E53935;
}

.c0::-moz-focus-inner {
  border: none;
}

.c0:focus {
  outline: none;
}

.c0:disabled,
.c0[aria-disabled] {
  color: hsla(0,0%,0%,.12);
  cursor: not-allowed;
}

.c0:not(:disabled):not([aria-disabled]) {
  cursor: pointer;
}

.c0:not(:disabled):not([aria-disabled]):hover,
.c0:not(:disabled):not([aria-disabled]):focus {
  background: hsla(0,0%,0%,.06);
}

<button
  className="c0"
  onClick={[Function]}
  type="button"
>
  DestructiveButton
</button>
`;

exports[`Button Primary button renders 1`] = `
.c0 {
  background: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: .8125rem;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  white-space: nowrap;
  padding: 0 .5rem;
  min-width: 4rem;
  min-height: 2rem;
  border: none;
  border-radius: .125rem;
  font-family: Roboto,sans-serif;
  color: hsla(0,0%,0%,.87);
  color: #5282B5;
}

.c0::-moz-focus-inner {
  border: none;
}

.c0:focus {
  outline: none;
}

.c0:disabled,
.c0[aria-disabled] {
  color: hsla(0,0%,0%,.12);
  cursor: not-allowed;
}

.c0:not(:disabled):not([aria-disabled]) {
  cursor: pointer;
}

.c0:not(:disabled):not([aria-disabled]):hover,
.c0:not(:disabled):not([aria-disabled]):focus {
  background: hsla(0,0%,0%,.06);
}

<button
  className="c0"
  onClick={[Function]}
  type="button"
>
  PrimaryButton
</button>
`;
